# GameDevelopment

./: .gitignore  CMakeLists.txt  GameDevelopment.sln  README.md
Game/: CMakeLists.txt  Game.cpp  Game.vcxproj
Game/src/: Game.cpp  main.cpp
GameCore/: CMakeLists.txt
GameCore/src/: Game.cpp  Game.h
GameCoreTests/: CMakeLists.txt
GameEngine/src/: Engine.cpp  Engine.h  Point.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h  WindowConfig.h
GameEngineLib/: CMakeLists.txt  EngineIncludes.props  GameEngineLib.vcxproj  GameEngineLib.vcxproj.filters  Window.cpp  Window.h  packages.config
GameEngineLib/src/: Engine.cpp  Engine.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
GameEngineLib/src/Window/: IWindow.h
GameEngineLib/src/Window/Linux/: WindowLinux.cpp  WindowLinux.h  WindowPlatformLinux.cpp
GameEngineLib/src/Window/Windows/: WindowPlatformWin32.cpp  WindowWin32.cpp  WindowWin32.h
GameEngineTests/: CMakeLists.txt  GameEngineTests.vcxproj  test.cpp
GameEngineTests/tests/: WindowTest.cpp
GameProjectTests/: CMakeLists.txt  GameProjectTests.vcxproj
